[package]
name = "async-event-loop"
version = "0.1.0"
authors = ["sbadger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2", features = ["rt-core", "time", "blocking", "sync"] }
tokio = { version = "0.2", features = ["full"] }

